# Quantify

./: .gitignore  README.md  docker-compose.yml  package-lock.json
.github/workflows/: go.yml
ai-service/: .env  Dockerfile  README.md  ai_user_manual.md  analytics.py  backend_client.py  churn_prediction.py  forecasting.py  main.py  pyproject.toml
ai-service/tests/: test_agent_loop.py  test_forecast_engine.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  gen_hash.go  go.mod  go.sum
backend/api/: openapi.yaml
backend/config/: integrations.yaml
backend/docs/: api_authorization_matrix.md  api_documentation.md  backend_analysis_for_new_requirements.md  backend_remediation_plan.md  business_logic.md  business_logic_details.md  current_implementation_analysis.md  final_analysis.md  frontend_bulk_import_guide.md  full_project_analysis.md  global_search_analysis.md  intelligence_user_manual.md  intuitive_query_analysis.md  production_readiness_analysis.md  proposed_notification_implementation.md  proposed_report_generation_enhancements.md  remediation_tasks.md  reports_explained.md  requirement_analysis.md  simulation_analysis_status.md
client/: Dockerfile  add_shadcn_components.sh  components.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs
client/docs/: design_principles_theming.md  frontend_feature_plan.md
client/src/: app.css
docs/: access_control.md  backend_analysis.md  bulk_import_hardening_plan.md  report-walkthrough.md  reports_user_guide.md  shop_owner_manual.md
frontend/: .dockerignore  Dockerfile
(+232 files in other folders)
