[tool.poetry]
name = "quantify-ai-service"
version = "0.1.0"
description = "AI Service for Quantify using Z.AI"
authors = ["Admin <admin@quantify.com>"]
readme = "README.md"
packages = [{include = "ai_service"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.4"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
