[tool.poetry]
name = "quantify-ai-service"
version = "0.1.0"
description = "AI Service for Quantify using Z.AI"
authors = ["Admin <admin@quantify.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
openai = "^2.9.0"
fastapi = "^0.124.0"
uvicorn = "^0.38.0"
pydantic = "^2.12.5"
python-dotenv = "^1.2.0"
apscheduler = "^3.11.1"
requests = "^2.32.5"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
